--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(leave_package_cli)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(leave_package_cli main.cpp lp_exceptions.h communication.cpp communication.h)
+add_executable(leave_package_cli main.cpp lp_exceptions.h communication.cpp communication.h commandHandler.cpp commandHandler.h)
 target_link_libraries(leave_package_cli pthread)
